# cicd-helper

./: .env.example  .gitignore  Dockerfile  MakeFile  README.md  main.py  pyproject.toml
src/: settings.py  versions.py
src/integrations/: __init__.py  structs.py
src/integrations/git/: manager.py
src/integrations/gitlab/: manager.py
src/integrations/jira/: manager.py  structs.py
